Terraform_AWS/nat.tf
#Define External IP 
resource "aws_eip" "Moja-nat" {
  vpc = true
}

resource "aws_nat_gateway" "Moja-nat-gw" {
  allocation_id = aws_eip.Moja-nat.id
  subnet_id     = aws_subnet.mojaVPC-public-1.id
  depends_on    = [aws_internet_gateway.Moja-gw]
}

resource "aws_route_table" "Moja-private" {
  vpc_id = aws_vpc.mojaVPC.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.Moja-nat-gw.id
  }

  tags = {
    Name = "Moja-private"
  }
}

# route associations private
resource "aws_route_table_association" "Moja-private-1-a" {
  subnet_id      = aws_subnet.mojaVPC-private-1.id
  route_table_id = aws_route_table.Moja-private.id
}

resource "aws_route_table_association" "Moja-private-1-b" {
  subnet_id      = aws_subnet.mojaVPC-private-2.id
  route_table_id = aws_route_table.Moja-private.id
}

resource "aws_route_table_association" "Moja-private-1-c" {
  subnet_id      = aws_subnet.mojaVPC-private-3.id
  route_table_id = aws_route_table.Moja-private.id
}
