Terraform_AWS/vpc.tf
#Create AWS VPC
resource "aws_vpc" "mojaVPC" {
  cidr_block       = "10.0.0.0/24"
  instance_tenancy = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  enable_classiclink   = "false"

  tags = {
    Name = "levelupvpc"
  }
}

# Public Subnets in Custom VPC
resource "aws_subnet" "mojaVPC-public-1" {
  vpc_id                  = aws_vpc.mojaVPC.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-2a"

  tags = {
    Name = "mojaVPC-public-1"
  }
}

resource "aws_subnet" "mojaVPC-public-2" {
  vpc_id                  = aws_vpc.mojaVPC.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-2b"

  tags = {
    Name = "mojaVPC-public-2"
  }
}

resource "aws_subnet" "mojaVPC-public-3" {
  vpc_id                  = aws_vpc.mojaVPC.id
  cidr_block              = "10.0.3.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-2c"

  tags = {
    Name = "mojaVPC-public-3"
  }
}

# Private Subnets in Custom VPC
resource "aws_subnet" "mojaVPC-private-1" {
  vpc_id                  = aws_vpc.mojaVPC.id
  cidr_block              = "10.0.4.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "us-east-2a"

  tags = {
    Name = "mojaVPC-private-1"
  }
}

resource "aws_subnet" "mojaVPC-private-2" {
  vpc_id                  = aws_vpc.mojaVPC.id
  cidr_block              = "10.0.5.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "us-east-2b"

  tags = {
    Name = "mojaVPC-private-2"
  }
}

resource "aws_subnet" "mojaVPC-private-3" {
  vpc_id                  = aws_vpc.mojaVPC.id
  cidr_block              = "10.0.6.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "us-east-2c"

  tags = {
    Name = "mojaVPC-private-3"
  }
}

# Custom internet Gateway
resource "aws_internet_gateway" "Moja-gw" {
  vpc_id = aws_vpc.mojaVPC.id

  tags = {
    Name = "Moja-gw"
  }
}

#Routing Table for the Custom VPC
resource "aws_route_table" "Moja-public" {
  vpc_id = aws_vpc.mojaVPC.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.Moja-gw.id
  }

  tags = {
    Name = "Moja-public-1"
  }
}

resource "aws_route_table_association" "Moja-public-1-a" {
  subnet_id      = aws_subnet.mojaVPC-public-1.id
  route_table_id = aws_route_table.Moja-public.id
}

resource "aws_route_table_association" "Moja-public-2-a" {
  subnet_id      = aws_subnet.mojaVPC-public-2.id
  route_table_id = aws_route_table.Moja-public.id
}

resource "aws_route_table_association" "Moja-public-3-a" {
  subnet_id      = aws_subnet.mojaVPC-public-3.id
  route_table_id = aws_route_table.Moja-public.id
}
